--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,36 @@
+aws==0.2.5
+awscli==1.43.13
+bcrypt==5.0.0
+boto3==1.42.6
+botocore==1.42.7
+cffi==2.0.0
+colorama==0.4.6
+cryptography==46.0.3
+decorator==5.2.1
+Deprecated==1.3.1
+docutils==0.19
+dotenv==0.9.9
+fabric==3.2.2
+invoke==2.2.1
+jmespath==1.0.1
+mysql-connector-python==9.5.0
 numpy==2.3.5
 pandas==2.3.3
+paramiko==4.0.0
+prettytable==3.17.0
+pyasn1==0.6.1
+pycparser==2.23
+PyNaCl==1.6.1
 python-dateutil==2.9.0.post0
+python-decouple==3.8
+python-dotenv==1.2.1
 pytz==2025.2
+PyYAML==6.0.3
+rsa==4.7.2
+s3transfer==0.16.0
+setuptools==80.9.0
 six==1.17.0
 tzdata==2025.2
+urllib3==2.6.1
+wcwidth==0.2.14
+wrapt==2.0.1
